--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,158 +1,113 @@
+aiohttp==3.8.5
+aiosignal==1.3.1
+alembic==1.11.3
+annotated-types==0.5.0
 anyio==3.7.1
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.2.1
-async-lru==2.0.3
+appdirs==1.4.4
+asgiref==3.7.2
+async-timeout==4.0.3
 attrs==23.1.0
-Babel==2.12.1
-backcall==0.2.0
-bcc==0.18.0
-beautifulsoup4==4.12.2
-bleach==6.0.0
-blinker==1.4
-Brlapi==0.8.3
-certifi==2020.6.20
-cffi==1.15.1
-chardet==4.0.0
+bentoml==1.1.1
+blinker==1.6.2
+build==0.10.0
+cattrs==23.1.2
+certifi==2023.7.22
 charset-normalizer==3.2.0
-chrome-gnome-shell==0.0.0
-click==8.0.3
-colorama==0.4.4
-comm==0.1.3
-command-not-found==0.3
-cryptography==3.4.8
-cupshelpers==1.0
-dbus-python==1.2.18
-debugpy==1.6.7
-decorator==5.1.1
-defer==1.0.6
-defusedxml==0.7.1
-distro==1.7.0
-exceptiongroup==1.1.2
-executing==1.2.0
-fastjsonschema==2.18.0
-folder-color==0.0.86
-folder-color-common==0.0.86
-fqdn==1.5.1
-hidpidaemon==18.4.6
-httplib2==0.20.2
-idna==3.3
-importlib-metadata==4.6.4
-ipykernel==6.25.0
-ipython==8.14.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.7
-isoduration==20.11.0
-jedi==0.18.2
-jeepney==0.7.1
+circus==0.18.0
+click==8.1.7
+click-option-group==0.5.6
+cloudpickle==2.2.1
+colorama==0.4.6
+contextlib2==21.6.0
+contourpy==1.1.0
+cycler==0.11.0
+databricks-cli==0.17.7
+deepmerge==1.1.0
+Deprecated==1.2.14
+docker==6.1.3
+entrypoints==0.4
+exceptiongroup==1.1.3
+fastapi==0.101.1
+Flask==2.3.2
+fonttools==4.42.1
+frozenlist==1.4.0
+fs==2.4.16
+gitdb==4.0.10
+GitPython==3.1.32
+greenlet==2.0.2
+h11==0.14.0
+idna==3.4
+importlib-metadata==6.0.1
+itsdangerous==2.1.2
 Jinja2==3.1.2
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.18.4
-jsonschema-specifications==2023.7.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.6.3
-jupyter-lsp==2.2.0
-jupyter_client==8.3.0
-jupyter_core==5.3.1
-jupyter_server==2.7.0
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.3
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.8
-jupyterlab_server==2.24.0
-kernelstub==3.1.4
-keyring==23.5.0
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-louis==3.20.0
-macaroonbakery==1.3.1
+joblib==1.3.2
+kiwisolver==1.4.4
+Mako==1.2.4
+Markdown==3.4.4
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
-matplotlib-inline==0.1.6
-mistune==3.0.1
-more-itertools==8.10.0
-nbclient==0.8.0
-nbconvert==7.7.3
-nbformat==5.9.1
-nest-asyncio==1.5.6
-netaddr==0.8.0
-netifaces==0.11.0
-notebook==7.0.0
-notebook_shim==0.2.3
-oauthlib==3.2.0
-overrides==7.3.1
+matplotlib==3.7.2
+mdurl==0.1.2
+mlflow==2.6.0
+multidict==6.0.4
+numpy==1.25.2
+oauthlib==3.2.2
+opentelemetry-api==1.18.0
+opentelemetry-instrumentation==0.39b0
+opentelemetry-instrumentation-aiohttp-client==0.39b0
+opentelemetry-instrumentation-asgi==0.39b0
+opentelemetry-sdk==1.18.0
+opentelemetry-semantic-conventions==0.39b0
+opentelemetry-util-http==0.39b0
 packaging==23.1
-pandocfilters==1.5.0
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-platformdirs==3.9.1
-pop-transition==1.1.2
+pandas==2.0.3
+pathspec==0.11.2
+Pillow==10.0.0
+pip-requirements-parser==32.0.1
+pip-tools==7.3.0
 prometheus-client==0.17.1
-prompt-toolkit==3.0.39
-protobuf==3.12.4
+protobuf==4.24.1
 psutil==5.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pycairo==1.20.1
-pycparser==2.21
-pycups==2.0.1
-pydbus==0.6.0
-Pygments==2.15.1
-PyGObject==3.42.1
-PyJWT==2.3.0
-pymacaroons==0.13.0
-PyNaCl==1.5.0
-pyparsing==2.4.7
-pyRFC3339==1.1
-python-apt==2.4.0+ubuntu1
+pyarrow==12.0.1
+pydantic==2.2.1
+pydantic_core==2.6.1
+Pygments==2.16.1
+PyJWT==2.8.0
+pynvml==11.5.0
+pyparsing==3.0.9
+pyproject_hooks==1.0.0
 python-dateutil==2.8.2
-python-debian==0.1.43+ubuntu1.1
-python-gnupg==0.4.8
 python-json-logger==2.0.7
-python-xlib==0.29
-pytz==2022.1
-pyxdg==0.27
-PyYAML==5.4.1
-pyzmq==25.1.0
-qtconsole==5.4.3
-QtPy==2.3.1
-referencing==0.30.0
-repolib==2.2.1
-repoman==1.4.0
+python-multipart==0.0.6
+pytz==2023.3
+pywin32==306
+PyYAML==6.0.1
+pyzmq==25.1.1
+querystring-parser==1.2.4
 requests==2.31.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.9.2
-SecretStorage==3.3.1
-Send2Trash==1.8.2
-sessioninstaller==0.0.0
+rich==13.5.2
+schema==0.7.5
+scikit-learn==1.3.0
+scipy==1.11.2
+simple-di==0.1.5
 six==1.16.0
+smmap==5.0.0
 sniffio==1.3.0
-soupsieve==2.4.1
-stack-data==0.6.2
-systemd-python==234
-terminado==0.17.1
-tinycss2==1.2.1
+SQLAlchemy==2.0.20
+sqlparse==0.4.4
+starlette==0.27.0
+tabulate==0.9.0
+threadpoolctl==3.2.0
 tomli==2.0.1
-tornado==6.3.2
-traitlets==5.9.0
+tornado==6.3.3
 typing_extensions==4.7.1
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufw==0.36.1
-uri-template==1.3.0
-urllib3==1.26.5
-wadllib==1.3.6
-wcwidth==0.2.6
-webcolors==1.13
-webencodings==0.5.1
+tzdata==2023.3
+urllib3==1.26.16
+uvicorn==0.23.2
+waitress==2.1.2
+watchfiles==0.19.0
 websocket-client==1.6.1
-widgetsnbextension==4.0.8
-xdg==5
-xkit==0.0.0
-zipp==1.0.0
+Werkzeug==2.3.7
+wrapt==1.15.0
+yarl==1.9.2
+zipp==3.16.2
